# ChangeLog for sys-apps/portage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1335 2013/08/04 22:40:53 zmedico Exp $

*portage-2.2.0_alpha194 (04 Aug 2013)

  04 Aug 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha194.ebuild,
  -portage-2.2.0_alpha193.ebuild:
  2.2.0_alpha194 version bump. This includes all of the fixes in 2.1.13.5. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.13.5 (04 Aug 2013)

  04 Aug 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.13.5.ebuild,
  -portage-2.1.13.4.ebuild:
  2.1.13.5 version bump. This fixes bug #469616 (add repoman check for
  deprecated RUBY_TARGETS). This also fixes emerge --backtrack=0 to work
  correctly when there are rebuilds needed for slot-operator deps. Bug #472632
  tracks all bugs fixed since portage-2.1.12.2.

*portage-2.2.0_alpha193 (03 Aug 2013)

  03 Aug 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha193.ebuild,
  -portage-2.2.0_alpha192.ebuild:
  2.2.0_alpha193 version bump. This includes all of the fixes in 2.1.13.4. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.13.4 (03 Aug 2013)

  03 Aug 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.13.4.ebuild,
  -portage-2.1.13.3.ebuild:
  2.1.13.4 version bump. This fixes a compatibility issue with bash-3.2 which
  triggered unexpected token `(' error messages. Bug #472632 tracks all bugs
  fixed since portage-2.1.12.2.

  03 Aug 2013; Zac Medico <zmedico@gentoo.org> -portage-2.1.12.13.ebuild,
  -portage-2.2.0_alpha188.ebuild:
  Remove old versions.

*portage-2.2.0_alpha192 (03 Aug 2013)

  03 Aug 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha192.ebuild,
  -portage-2.2.0_alpha190.ebuild:
  2.2.0_alpha192 version bump. This includes all of the fixes in 2.1.13.3. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.13.3 (03 Aug 2013)
