@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/portage-2.2.0_alpha194.ebuild,v 1.1 2013/08/04 22:40:53 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/portage-2.2.0_alpha194.ebuild,v 1.2 2013/08/07 19:29:42 floppym Exp $
 
 # Require EAPI 2 since we now require at least python-2.6 (for python 3
 # syntax support) which also requires EAPI 2.
@@ -483,6 +483,11 @@ pkg_postinst() {
 		local sync_type=
 		[[ ${REPOS_CONF_SYNC} == git://* ]] && sync_type=git
 
+		if [[ ${REPOS_CONF_SYNC} == cvs://* ]]; then
+			sync_type=cvs
+			REPOS_CONF_SYNC=${REPOS_CONF_SYNC#cvs://}
+		fi
+
 		cat <<-EOF > "${T}/repos.conf"
 		[DEFAULT]
 		main-repo = ${repo_name:-gentoo}
@@ -492,6 +497,9 @@ pkg_postinst() {
 		sync-type = ${sync_type:-rsync}
 		sync-uri = ${REPOS_CONF_SYNC}
 		EOF
+
+		[[ ${sync_type} == cvs ]] && echo "sync-cvs-repo = $(<"${PORTDIR}/CVS/Repository")" >> "${T}/repos.conf"
+
 		local dest=${EROOT}/etc/portage/repos.conf
 		if [[ ! -f ${dest} ]] && mkdir -p "${dest}" 2>/dev/null ; then
 			dest=${EROOT}/etc/portage/repos.conf/${repo_name:-gentoo}.conf
