@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1335 2013/08/04 22:40:53 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1336 2013/08/07 19:29:42 floppym Exp $
+
+  07 Aug 2013; Mike Gilbert <floppym@gentoo.org> portage-2.1.13.5.ebuild,
+  portage-2.2.0_alpha194.ebuild:
+  Update repos.conf migration code to handle CVS checkouts corrrectly.
 
 *portage-2.2.0_alpha194 (04 Aug 2013)
 
